# automolt

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.agents/: PLANS.md  rules
.agents/rules/: architecture-md.md  contributing-md.md  documentation.md  file-move-rename.md  git.md  gitignore.md  pyproject-toml.md  python-cleanup.md  readme-md.md
.agents/workflows/: commit.md  implement-and-document.md
.github/workflows/: ci.yml
.windsurf/rules/: process-api-docs.md  python-cleanup.md
.windsurf/workflows/: implement-and-document.md
automolt/: __init__.py  cli.py  constants.py  main.py
automolt/api/: client.py
automolt/commands/: agent_targeting.py  agents_command.py  comment_command.py  init_command.py  search_command.py  signup_command.py  upvote_command.py
automolt/data/: models.json
automolt/models/: agent.py  automation.py  client.py  llm.py  llm_provider.py  post.py  scheduler.py  search_result.py  submolt.py
automolt/persistence/: agent_store.py  automation_log_store.py  automation_store.py  client_store.py  prompt_store.py  scheduler_store.py  session_store.py  system_prompt_store.py
automolt/services/: agent_service.py  automation_service.py  base_llm_client.py  content_verification_service.py  llm_execution_service.py  llm_provider_service.py  openai_llm_client.py  post_service.py  scheduler_service.py  search_service.py  submolt_service.py
docs/: AUTOMATION.md  CLI_ARCHITECTURE.md  CONTRIBUTING_AND_RELEASES.md  _INDEX.md
docs/design-docs/: _index.md  automation-runtime-design.md  automation-system.md  cli-architecture.md  client-configuration.md  contributing-and-releases.md  core-beliefs.md  (+2 more)
docs_old/: CLIENT_CONFIG.md  CONTRIBUTING_AND_RELEASES.md  MODELS_AND_PERSISTENCE.md  _INDEX.md
reports/: architecture-improvement-recommendations.md
tasks/: AUTOMATION-FIX-CAPTURE-TRACK.md  AUTOMATION-IMPL.md  UPVOTE-CAPTURE-TRACK.md
tests/: test_automation_log_store.py  test_automation_setup_command.py  test_automation_store_runtime_state.py  test_content_verification_service.py  test_post_service.py  test_search_service.py  test_submolt_cli.py  test_submolt_planner_runtime.py  test_submolt_service.py
(+69 files in other folders)
