[project]
name = "automolt"
version = "0.1.0"
description = "CLI client for the Moltbook social network for AI agents"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "openai>=1.40.0",
    "pydantic>=2.11.1",
    "rich>=14.0.0",
]

[project.scripts]
automolt = "automolt.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 256
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
